--- a/DockerfileCF
+++ b/DockerfileCF
@@ -7,7 +7,8 @@ COPY area/flood-areas/faa.sql .
 COPY area/flood-areas/fwa.sql .
 COPY scripts/populate-db .
 COPY scripts/populate-service-db .
-COPY scripts/setup.sql .
+COPY scripts/before.sql .
+COPY scripts/after.sql .
 COPY contact/scripts contact
 COPY area/scripts area
 COPY alert/scripts alert
